doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\extensions\greenfoot.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\bluejcore.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\bluejeditor.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\bluejext.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\junit-4.11.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\hamcrest-core-1.3.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\bluej.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\classgraph-4.2.6.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\diffutils-1.2.1.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\commons-logging-api-1.1.2.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\jl1.0.1.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\opencsv-2.3.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\xom-1.2.9.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\lang-stride.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\nsmenufx-2.1.4.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\richtextfx-fat-0.9.0.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\guava-17.0.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\httpclient-4.1.1.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\httpcore-4.1.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\httpmime-4.1.1.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.base.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.controls.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.fxml.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.graphics.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.media.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.properties.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.swing.jar;D:\SEMESTRES\4SEMESTRE\POO\progPOO\greenfoot\lib\javafx\lib\javafx.web.jar;D:\SEMESTRES\4SEMESTRE\POO\Castle-in-the-sky - copia
-d
D:\SEMESTRES\4SEMESTRE\POO\Castle-in-the-sky - copia\doc
-encoding
UTF-8
-charset
UTF-8
D:\SEMESTRES\4SEMESTRE\POO\Castle-in-the-sky - copia\MainMenu.java
<---- end of javadoc command ---->
Loading source file D:\SEMESTRES\4SEMESTRE\POO\Castle-in-the-sky - copia\MainMenu.java...
D:\SEMESTRES\4SEMESTRE\POO\Castle-in-the-sky - copia\MainMenu.java:19: error: ';' expected
        addObject(new PlayButton(this), 80, 145);
                 ^
D:\SEMESTRES\4SEMESTRE\POO\Castle-in-the-sky - copia\MainMenu.java:19: error: ';' expected
        addObject(new PlayButton(this), 80, 145);
                                      ^
2 errors
